--- a/app/app.global.css
+++ b/app/app.global.css
@@ -6,11 +6,12 @@
 
 body {
   position: relative;
-  color: white;
+  color: black;
   height: 100vh;
+  width: 100vw;
   background-color: #fbfbfb;
   font-family: 'Open Sans', Arial, Helvetica, Helvetica Neue, serif;
-  overflow-y: hidden;
+  margin: 0;
 }
 
 h2 {
@@ -18,7 +19,6 @@ h2 {
   font-size: 2.25rem;
   font-weight: bold;
   letter-spacing: -0.025em;
-  color: #fff;
 }
 
 p {
@@ -30,7 +30,6 @@ li {
 }
 
 a {
-  color: white;
   opacity: 0.75;
   text-decoration: none;
 }
