--- a/app/app.global.css
+++ b/app/app.global.css
@@ -9,7 +9,7 @@ body {
   color: black;
   height: 100vh;
   width: 100vw;
-  background-color: #fbfbfb;
+  background-color: #001F40;
   font-family: 'Open Sans', Arial, Helvetica, Helvetica Neue, serif;
   margin: 0;
 }
